Implement check for a winner and game status Implement getStatus to check the current status of the game Implement getWinner to check which player is the winner

--- a/1_The_Physical/Level_2_Stateful_Guess_Point/Shared/TicTacToe/package.json
+++ b/1_The_Physical/Level_2_Stateful_Guess_Point/Shared/TicTacToe/package.json
@@ -48,6 +48,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "jest-cucumber": "^3.0.1"
+    "jest-cucumber": "^3.0.1",
+    "readline": "^1.3.0"
   }
 }
